ViTables ChangeLog
==================
** February 07, 2013 **
Time series plugin support for soft/external links has been fixed.

** February 06, 2013 **
<Thanks To> tab of the About ViTables dialog has been updated.

Pandas time series support added to time series plugin.

In addition, the plugin has been simplified and refactored.

** February 01, 2013 **
The shebang/encoding lines of all modules have been updated.

The change ensure consistency with scripts/vitables launcher module.

** January 30, 2013 **
The processing of command-line arguments has been upgraded.

The deprecated optparse module has been replaced with the argparse module.

** January 28, 2013 **
A selected cell rendering bug has been fixed.

** January 24, 2013 **
The license of plugins and some example scripts has been updated.

Some more copyright notices have been updated.

The copyright notice of the license has been updated.

The launcher script has been modified.

Now it can be launched by itself (instead of calling python in the command
line)

** January 23, 2013 **
The leafView.py module has been revamped.

Several data navigation bugs have been hopefuly fixed. The code has been
refactored and simplified.

** November 28, 2011 **
Table navigation using the mouse has been debugged.

Sometimes strange jumps occurred after a buffer fault (a certain amount of rows
was skipped) making dataset browsing somewhat unpredictable. These jumps have
been removed.

** November 18, 2011 **
The Makefile for building the Mac OS X bundle has been updated.

The path to the standard Python has been fixed. The filename of the PDF
version of the Users Guide has been updated. Also the Readme-MacOSX.rtf has
been updated (reference to Carabos coop has been removed).

** October 27, 2011 **
The vitables launcher script has been updated.

Following the suggestions made by Dav Clark in the Users Group, the usage of
pythonw on MacOSX has been dropped.

** October 23, 2011 **